--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+---
+title: Tuft
+---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tuft</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>tuft</h1>
+    <h1>{{ page.title }}</h1>
   </body>
 </html>
