Add 'npm install' code element to landing page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ title: Tuft
 <section id="intro">
   <h1 id="intro-title">Tuft</h1>
   <p>An HTTP/2 web framework for Node.js</p>
+  <div id="intro-code-container">
+    <code>$ npm install tuft</code>
+  </div>
 </section>
 <section id="features">
   <div id="feature-graphic-1" class="feature-graphic">
