Add benchmarks content

--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -3,7 +3,74 @@ layout: default
 title: Tuft
 ---
 <div id="main-margin-left"></div>
-<main id="main">
-  <p>This section has not been completed.</p>
+<main id="about-main">
+  <p>This page contains the benchmark results for Tuft compared with a few other popular web frameworks that also support HTTP/2. For more information on how the benchmarks were set up, and to view the specific application code used for each framework, see the <a href="https://github.com/tuftjs/bench" target="_blank">GitHub repository</a>.</p>
+
+  <p>The benchmark results below use an HTTP/2 load testing client called <code class="code-inline">h2load</code>, which comes bundled with <a href="https://nghttp2.org" target="_blank">nghttp2</a>.</p>
+
+  <ul id="api-list">
+    <li><strong>Date:</strong> May 13, 2020</li>
+    <li><strong>Hardware:</strong> Digital Ocean CPU-optimized droplet (2 vCPUS, 4GB)</li>
+    <li><strong>OS:</strong> Ubuntu 18.04.3 (LTS) x64</li>
+    <li><strong>Node version:</strong> 14.2.0</li>
+    <li><strong>Client command:</strong> <code class="code-inline">h2load -t2 -c10 -m100 --duration=60 --warm-up-time=30</code></li>
+  </ul>
+
+  <h3>Node native - <span>36,702 req/s</span></h3>
+  <pre><code class="language-">finished in 90.00s, 36701.67 req/s, 1.68MB/s
+requests: 2202100 total, 2202100 started, 2202100 done, 2202100 succeeded, 0 failed, 0 errored, 0 timeout
+status codes: 2202000 2xx, 0 3xx, 0 4xx, 0 5xx
+traffic: 100.81MB (105710890) total, 25.30MB (26533310) headers (space savings 91.66%), 41.09MB (43082000) data
+                      min         max         mean         sd        +/- sd
+time for request:     5.33ms     73.28ms     27.28ms      7.39ms    81.36%
+time for connect:        0us         0us         0us         0us     0.00%
+time to 1st byte:        0us         0us         0us         0us     0.00%
+req/s           :    3614.97     3724.98     3670.14       56.07   100.00%</code></pre>
+
+  <h3>Tuft - <span>32,367 req/s</span></h3>
+  <pre><code class="language-">finished in 90.00s, 32366.67 req/s, 1.48MB/s
+requests: 1942000 total, 1942000 started, 1942000 done, 1942000 succeeded, 0 failed, 0 errored, 0 timeout
+status codes: 1942900 2xx, 0 3xx, 0 4xx, 0 5xx
+traffic: 88.94MB (93265090) total, 22.56MB (23657310) headers (space savings 91.66%), 36.63MB (38408500) data
+                    min         max         mean         sd        +/- sd
+time for request:     5.78ms     71.81ms     30.85ms      8.43ms    82.82%
+time for connect:        0us         0us         0us         0us     0.00%
+time to 1st byte:        0us         0us         0us         0us     0.00%
+req/s           :    3219.93     3251.63     3236.61       15.24    80.00%</code></pre>
+
+  <h3>Fastify - <span>21,440 req/s</span></h3>
+  <pre><code class="language-">finished in 90.00s, 21440.00 req/s, 1005.29KB/s
+requests: 1286400 total, 1286400 started, 1286400 done, 1286400 succeeded, 0 failed, 0 errored, 0 timeout
+status codes: 1286500 2xx, 0 3xx, 0 4xx, 0 5xx
+traffic: 58.90MB (61765090) total, 14.60MB (15305310) headers (space savings 91.66%), 23.69MB (24836500) data
+                      min         max         mean         sd        +/- sd
+time for request:    32.58ms     93.41ms     46.60ms     10.15ms    81.99%
+time for connect:        0us         0us         0us         0us     0.00%
+time to 1st byte:        0us         0us         0us         0us     0.00%
+req/s           :    2096.63     2191.64     2143.97       49.90   100.00%</code></pre>
+
+  <h3>Koa - <span>15,462 req/s</span></h3>
+  <pre><code class="language-">finished in 90.00s, 15461.67 req/s, 725.12KB/s
+requests: 927700 total, 927700 started, 927700 done, 927700 succeeded, 0 failed, 0 errored, 0 timeout
+status codes: 927900 2xx, 0 3xx, 0 4xx, 0 5xx
+traffic: 42.49MB (44551390) total, 10.90MB (11425880) headers (space savings 91.65%), 17.67MB (18532800) data
+                      min         max         mean         sd        +/- sd
+time for request:    32.37ms    149.09ms     64.64ms     15.74ms    71.50%
+time for connect:        0us         0us         0us         0us     0.00%
+time to 1st byte:        0us         0us         0us         0us     0.00%
+req/s           :    1483.34     1638.34     1546.16       79.33    60.00%</code></pre>
+
+  <h3>Hapi - <span>12,813 req/s</span></h3>
+  <pre><code class="language-">finished in 90.00s, 12813.33 req/s, 625.81KB/s
+requests: 768800 total, 768800 started, 768800 done, 768800 succeeded, 0 failed, 0 errored, 0 timeout
+status codes: 768700 2xx, 0 3xx, 0 4xx, 0 5xx
+traffic: 36.67MB (38450010) total, 10.88MB (11404458) headers (space savings 92.52%), 14.11MB (14797900) data
+                      min         max         mean         sd        +/- sd
+time for request:    46.83ms    155.88ms     78.00ms     15.49ms    72.14%
+time for connect:        0us         0us         0us         0us     0.00%
+time to 1st byte:        0us         0us         0us         0us     0.00%
+req/s           :    1224.98     1336.66     1281.32       58.33   100.00%</code></pre>
+
+
 </main>
 <div id="main-margin-right"></div>
