Fix typo in benchmarks

--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -58,7 +58,7 @@ traffic: 93.91MB (98468800) total, 23.31MB (24442186) headers (space savings 91.
 time for request:   192.35ms    443.51ms    292.88ms     35.93ms    68.17%
 time for connect:        0us         0us         0us         0us     0.00%
 time to 1st byte:        0us         0us         0us         0us     0.00%
-req/s           :     319.96      356.66      341.33       13.56    48.00%/code></pre>
+req/s           :     319.96      356.66      341.33       13.56    48.00%</code></pre>
 
   <h3>Hapi - <span>29,21 req/s</span></h3>
   <pre><code class="language-">finished in 90.01s, 29213.33 req/s, 1.39MB/s
