--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -9,11 +9,11 @@ title: Tuft
   <p>The benchmark results below use an HTTP/2 load testing client called <code class="code-inline">h2load</code>, which comes bundled with <a href="https://nghttp2.org" target="_blank">nghttp2</a>.</p>
 
   <ul id="api-list">
-    <li><strong>Date:</strong> May 13, 2020</li>
-    <li><strong>Hardware:</strong> Digital Ocean CPU-optimized droplet (2 vCPUS, 4GB)</li>
+    <li><strong>Date:</strong> May 14, 2020</li>
+    <li><strong>Hardware:</strong> Digital Ocean CPU-optimized droplet (4 vCPUS, 8GB)</li>
     <li><strong>OS:</strong> Ubuntu 18.04.3 (LTS) x64</li>
-    <li><strong>Node version:</strong> 14.2.0</li>
-    <li><strong>Client command:</strong> <code class="code-inline">h2load -t2 -c10 -m100 --duration=60 --warm-up-time=30</code></li>
+    <li><strong>Node version:</strong> 12.16.3</li>
+    <li><strong>Client command:</strong> <code class="code-inline">h2load -c100 -m100 --duration=60 --warm-up-time=30</code></li>
   </ul>
 
   <h3>Node native - <span>89,772 req/s</span></h3>
