--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 ---
 layout: default
-title: Tuft
 ---
 <section id="intro">
-  <h1 id="intro-title">Tuft</h1>
+  <h1>Tuft</h1>
   <p>An HTTP/2 web framework for Node.js</p>
-  <div id="intro-code-container">
+  <div>
     <code>$ npm install tuft</code>
   </div>
 </section>
-<section id="features">
-  <div id="feature-graphic-1" class="feature-graphic">
-    <img src="/assets/images/speed-black-48dp.svg" alt="">
-  </div>
-  <div id="feature-text-1" class="feature-text">
-    <h2>Speedy</h2>
-    <p>Tuft is an HTTP/2-only framework built around Node's <a href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_core_api" target="_blank">core HTTP/2 API</a>, which gives it a performance advantage over other frameworks that rely on Node's <a href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_compatibility_api" target="_blank">compatibility API</a>.</p>
-    <br>
-    <p>See the <a href="#">benchmarks</a>.</p>
-  </div>
-  <div id="feature-graphic-2" class="feature-graphic">
-    <img src="/assets/images/exposure_zero-black-48dp.svg" alt="">
-  </div>
-  <div id="feature-text-2" class="feature-text">
-    <h2>Minimalist</h2>
-    <p>A basic Tuft server is dependency-free, and only comes with a small set of features to keep things lean. Routing is baked into the core functionalty, but most other features that are commonly found in other route-based frameworks are intentionally not included, which results in minimal overhead.</p>
-    <br>
-  </div>
-  <div id="feature-graphic-3" class="feature-graphic">
-    <img src="/assets/images/aspect_ratio-black-48dp.svg" alt="">
-  </div>
-  <div id="feature-text-3" class="feature-text">
-    <h2>Scalable</h2>
-    <p>Tuft's routing algorithm has a timing complexity of O(1), so it will continue to serve requests at lightning fast speed no matter how many routes you add.</p>
-  </div>
-  <div id="feature-graphic-4" class="feature-graphic">
-    <img src="/assets/images/extension-black-48dp.svg" alt="">
-  </div>
-  <div id="feature-text-4" class="feature-text">
-    <h2>Extensible</h2>
-    <p>Add the required functionalty to your server only as needed. Features like request body parsing and response body streaming are packaged as separate extensions within Tuft's base installation. You can also create your own extensions, and optionally make them available to other developers.</p>
-  </div>
-</section>
-<section id="get-started-btn">
-  <a href="/docs/">Get Started</a>
-</section>
+<div class="main-margin left index"></div>
+<main>
+  <section id="features">
+    <div class="feature-graphic-container one">
+      <img src="/assets/images/speed-black-48dp.svg" alt="">
+    </div>
+    <div class="feature-text-container one">
+      <h2>Speedy</h2>
+      <p>Tuft is an HTTP/2-only framework built around Node's <a
+          href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_core_api" target="_blank">core HTTP/2 API</a>,
+        which gives it a performance advantage over other frameworks that rely on Node's <a
+          href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_compatibility_api"
+          target="_blank">compatibility API</a>.</p>
+      <br>
+      <p>See the <a href="/benchmarks/">benchmarks</a>.</p>
+    </div>
+    <div class="feature-graphic-container two">
+      <img src="/assets/images/exposure_zero-black-48dp.svg" alt="">
+    </div>
+    <div class="feature-text-container two">
+      <h2>Minimalist</h2>
+      <p>Routing is baked into the core functionalty, but many other features commonly found in other
+        route-based frameworks are intentionally not included, which results in minimal overhead.</p>
+      <br>
+    </div>
+    <div class="feature-graphic-container three">
+      <img src="/assets/images/aspect_ratio-black-48dp.svg" alt="">
+    </div>
+    <div class="feature-text-container three">
+      <h2>Scalable</h2>
+      <p>Tuft's routing algorithm has a timing complexity of O(1), so it will continue to serve requests at lightning
+        fast speed, even if you have thousands of routes.</p>
+    </div>
+    <div class="feature-graphic-container four">
+      <img src="/assets/images/extension-black-48dp.svg" alt="">
+    </div>
+    <div class="feature-text-container four">
+      <h2>Extensible</h2>
+      <p>Add the required functionality to your server only as needed. Utilize Tuft's built-in extensions or write your
+        own, and optionally make them available to other developers.</p>
+    </div>
+  </section>
+  <section id="get-started-btn">
+    <a href="/docs/">Get Started</a>
+  </section>
+</main>
+<div class="main-margin right index"></div>
