Implement responsive design

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -24,7 +24,7 @@ permalink: /benchmarks/
 
     {% for item in site.data.benchmarks.results %}
       <h3>{{ item.name }} - <span>{{ item.result }} req/s</span></h3>
-      <pre><code class="language-">{{ item.data }}</code></pre>
+      <pre><code class="language-none">{{ item.data }}</code></pre>
     {% endfor %}
   </div>
 </main>
