--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
     </div>
     <div class="feature-text-container two">
       <h2>Minimalist</h2>
-      <p>Routing is baked into the core functionalty, but many other features commonly found in other
+      <p>Routing is baked into the core functionality, but many other features commonly found in other
         route-based frameworks are intentionally not included, which results in minimal overhead.</p>
       <br>
     </div>
@@ -39,7 +39,7 @@ layout: default
     <div class="feature-text-container three">
       <h2>Scalable</h2>
       <p>Tuft's routing algorithm has a timing complexity of O(1), so it will continue to serve requests at lightning
-        fast speed, even if you have thousands of routes.</p>
+        fast speed, even with thousands of routes.</p>
     </div>
     <div class="feature-graphic-container four">
       <img src="/assets/images/extension-black-48dp.svg" alt="">
