Remove references to 'HTTP/2-only'

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about/
 <main id="about">
   <div id="about-container">
     <h2>What?</h2>
-    <p>Tuft is an HTTP/2-only web framework for Node.js that has been designed to provide excellent routing performance,
+    <p>Tuft is an HTTP/2 web framework for Node.js that has been designed to provide excellent routing performance,
       even when serving thousands of routes, while maintaining minimal overhead. While it keeps its feature set to a
       minimum, it provides mechanisms to extend its functionality so that it can be adapted to almost any need.</p>
 
