--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
     </div>
     <div class="feature-text-container one">
       <h2>Speedy</h2>
-      <p>Tuft is an HTTP/2-only framework built around Node's <a
+      <p>Tuft is an HTTP/2 framework built around Node's <a
           href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_core_api" target="_blank">core HTTP/2 API</a>,
         which gives it a performance advantage over other frameworks that rely on Node's <a
           href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_compatibility_api"
