Remove references to HTTP/2

--- a/about.html
+++ b/about.html
@@ -5,37 +5,20 @@ permalink: /about/
 <div class="main-margin left"></div>
 <main id="about">
   <div id="about-container">
-    <h2>What?</h2>
-    <p>Tuft is an HTTP/2 web framework for Node.js that has been designed to provide excellent routing performance,
-      even when serving thousands of routes, while maintaining minimal overhead. While it keeps its feature set to a
-      minimum, it provides mechanisms to extend its functionality so that it can be adapted to almost any need.</p>
+    <p>Tuft is a web framework for Node.js that has been designed to provide excellent routing performance, even while serving thousands of routes. Its feature set is deliberately kept to a minimum, which means only a small amount of overhead is added to each HTTP transaction. However, there are mechanisms in place to extend the functionality of Tuft should it be required.</p>
 
     <br>
-    <h2>Why?</h2>
-    <p>Tuft was built with the primary objective of becoming a viable HTTP/2 framework for Node.js. Specifically, it has
-      been built to utilize Node's <a href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_core_api"
-        target="_blank">core HTTP/2 API</a>. Not all of the most commonly used frameworks support HTTP/2, and the ones
-      that do tend to treat it like a second-class citizen by only supporting it via Node's <a
-        href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_compatibility_api" target="_blank">compatibility
-        API</a>.</p>
-    <p>HTTP/2 provides a significant performance increase over HTTP/1, and we are now at a stage where all major web
-      browsers support it. Some of its benefits include:</p>
+    <h2>ABOUT THE AUTHOR</h2>
 
-    <ul class="docs-list">
-      <li>Minimal overhead via efficient HTTP header compression with <a href="https://tools.ietf.org/html/rfc7541"
-          target="_blank">HPACK</a>.</li>
-      <li>Reduced latency via full request/response multiplexing.</li>
-      <li>Increased security by favoring binary transmission over text.</li>
-      <li>Server push (<em>this feature has not yet been implemented in Tuft, it's on the to-do list!</em>).</li>
-    </ul>
+    <p>My name is Stuart Kennedy, and I'm a former translator and localization specialist for a mobile app company in Beijing. I am now an aspiring Node.js developer, looking to start a new career in Node.js web development.</p>
 
-    <p>All of the above is possible while maintaining the core concepts of HTTP, including URIs, status codes, and
-      request methods.</p>
+    <p>Tuft originally started as a project to improve my own understanding of Node.js in early 2019. When I first started, I knew how to create an application with Express, but had only a minimal understanding of the underlying Node.js processes. I have learned a great deal about Node.js via my work on this project and have since gone on to be awarded certifications as both a Node.js Application Developer and Node.js Services Developer.</p>
 
-    <br>
-    <h2>When?</h2>
-    <p>Development of Tuft in its first incarnation started in early 2019 as a part-time project to familiarize myself
-      with the inner workings of Node.js. It has evolved a lot since then, but it is still untested software.</p>
+    <p>
+      While Tuft is purely a personal project of mine, I have written it with the intention that it <em>could</em> be used in a production environment. However, as it has not been thoroughly tested, this is not recommended. Please feel free to play around with it and try creating some test applications using Tuft. There are no doubt issues that I cannot, or would not, be able to find on my own.
+    </p>
+
+    <p>My personal website can be viewed at <a href="https://iamstu.art" target="_blank">https://iamstu.art</a>.</p>
   </div>
 </main>
 <div class="main-margin right"></div>
