--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section id="intro">
   <h1>Tuft</h1>
-  <p>An HTTP/2 web framework for Node.js</p>
+  <p>A fast, lightweight web framework for Node.js</p>
   <div>
     <code>$ npm install tuft</code>
   </div>
@@ -16,21 +16,15 @@ layout: default
     </div>
     <div class="feature-text-container one">
       <h2>Speedy</h2>
-      <p>Tuft is an HTTP/2 framework built around Node's <a
-          href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_core_api" target="_blank">core HTTP/2 API</a>,
-        which gives it a performance advantage over other frameworks that rely on Node's <a
-          href="https://nodejs.org/dist/latest/docs/api/http2.html#http2_compatibility_api"
-          target="_blank">compatibility API</a>.</p>
-      <br>
-      <p>See the <a href="/benchmarks/">benchmarks</a>.</p>
+      <p>Tuft is one of the fastest web frameworks for Node.js. See the <a href="/benchmarks/">benchmarks</a>.</p>
     </div>
     <div class="feature-graphic-container two">
       <img src="/assets/images/exposure_zero-black-48dp.svg" alt="">
     </div>
     <div class="feature-text-container two">
       <h2>Minimalist</h2>
-      <p>Routing is baked into the core functionality, but many other features commonly found in other
-        route-based frameworks are intentionally not included, which results in minimal overhead.</p>
+      <p>Routing is a core feature of Tuft, but features commonly found in other
+        route-based frameworks are intentionally not included, resulting in minimal overhead.</p>
       <br>
     </div>
     <div class="feature-graphic-container three">
