Update about text and add profile photo

--- a/about.html
+++ b/about.html
@@ -5,14 +5,18 @@ permalink: /about/
 <div class="main-margin left"></div>
 <main id="about">
   <div id="about-container">
-    <p>Tuft is a web framework for Node.js that has been designed to provide excellent routing performance, even while serving thousands of routes. Its feature set is deliberately kept to a minimum, which means only a small amount of overhead is added to each HTTP transaction. However, there are mechanisms in place to extend the functionality of Tuft should it be required.</p>
+    <h1 class="page-title">What is Tuft?</h1>
+    <br>
+    <p>Tuft is a <em>web framework</em> for <strong>Node.js</strong> that has been designed to provide excellent routing performance, even while serving thousands of routes. Its feature set is deliberately kept to a minimum, which means only a small amount of overhead is added to each HTTP transaction. However, there are mechanisms in place to extend the functionality of Tuft should it be required.</p>
 
     <br>
-    <h2>ABOUT THE AUTHOR</h2>
+    <h2 class="page-title">About the Author</h2>
 
-    <p>My name is Stuart Kennedy, and I'm a former translator and localization specialist for a mobile app company in Beijing. I am now an aspiring Node.js developer, looking to start a new career in Node.js web development.</p>
+    <p>My name is <em>Stuart Kennedy</em>, and I am a former translator and localization specialist for a mobile app company in Beijing. I am now an aspiring Node.js developer based in New Zealand, looking to start a new career in Node.js web development.</p>
 
-    <p>Tuft originally started as a project to improve my own understanding of Node.js in early 2019. When I first started, I knew how to create an application with Express, but had only a minimal understanding of the underlying Node.js processes. I have learned a great deal about Node.js via my work on this project and have since gone on to be awarded certifications as both a Node.js Application Developer and Node.js Services Developer.</p>
+    <img id="profile-photo" src="/assets/images/profile.jpg" alt="Profile photo">
+
+    <p>Tuft originally started as a project to improve my own understanding of Node.js in early 2019. When I first started, I knew how to create an application with Express, but had only a minimal understanding of the underlying Node.js processes. I have learned a great deal about Node.js via my work on this project and have since gone on to be awarded certifications as both a <em>Node.js Application Developer</em> and <em>Node.js Services Developer</em>.</p>
 
     <p>
       While Tuft is purely a personal project of mine, I have written it with the intention that it <em>could</em> be used in a production environment. However, as it has not been thoroughly tested, this is not recommended. Please feel free to play around with it and try creating some test applications using Tuft. There are no doubt issues that I cannot, or would not, be able to find on my own.
