Add more information about benchmarks

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -5,11 +5,13 @@ permalink: /benchmarks/
 <div class="main-margin left"></div>
 <main id="benchmarks">
   <div id="benchmarks-container">
+    <h1 class="page-title">Benchmarks</h1>
+    <br>
     <p>This page contains the benchmark results for Tuft compared with other popular Node.js web frameworks. For more information on how the benchmarks were set up, and to view the specific application code
       used for each framework, see the <a href="https://github.com/tuftjs/bench" target="_blank">GitHub repository</a>.
     </p>
 
-    <p>The benchmark results below were obtained using <a href="http://httpd.apache.org/docs/2.4/programs/ab.html" target="_blank">ApacheBench</a>.</p>
+    <p>The benchmark results below were obtained using <a href="http://httpd.apache.org/docs/2.4/programs/ab.html" target="_blank">ApacheBench</a>, and are ordered from fastest to slowest.</p>
 
     <ul class="docs-list">
       <li><strong>Date:</strong> August 21, 2020</li>
