--- a/src/benchmarks.html
+++ b/src/benchmarks.html
@@ -2,7 +2,6 @@
 layout: default
 permalink: /benchmarks/
 ---
-<div class="main-margin left"></div>
 <main id="benchmarks">
   <div id="benchmarks-container">
     <h1 class="page-title">Benchmarks</h1>
@@ -28,8 +27,8 @@ permalink: /benchmarks/
           <th>Framework</th>
           <th>Version</th>
           <th>Req/s</th>
-          <th>Bytes/s (MB)</th>
-          <th>Latency (ms)</th>
+          <th class="table-wide">Bytes/s (MB)</th>
+          <th class="table-wide">Latency (ms)</th>
         </tr>
       </thead>
       <tbody>
@@ -37,46 +36,45 @@ permalink: /benchmarks/
           <td><em>none</em></td>
           <td>N/A</td>
           <td>22,474</td>
-          <td>3.48</td>
-          <td>4.08</td>
+          <td class="table-wide">3.48</td>
+          <td class="table-wide">4.08</td>
         </tr>
         <tr class="pure-table-odd">
           <td><strong>Tuft</strong></td>
           <td>2.3.1</td>
           <td>20,872</td>
-          <td>3.23</td>
-          <td>4.17</td>
+          <td class="table-wide">3.23</td>
+          <td class="table-wide">4.17</td>
         </tr>
         <tr class="pure-table-odd">
           <td>Fastify</td>
           <td>3.4.1</td>
           <td>18,858</td>
-          <td>2.92</td>
-          <td>5.08</td>
+          <td class="table-wide">2.92</td>
+          <td class="table-wide">5.08</td>
         </tr>
         <tr class="pure-table-odd">
           <td>Koa</td>
           <td>2.13.0</td>
           <td>14,959</td>
-          <td>2.32</td>
-          <td>6.14</td>
+          <td class="table-wide">2.32</td>
+          <td class="table-wide">6.14</td>
         </tr>
         <tr class="pure-table-odd">
           <td>Hapi</td>
           <td>20.0.0</td>
           <td>12,583</td>
-          <td>2.53</td>
-          <td>7.28</td>
+          <td class="table-wide">2.53</td>
+          <td class="table-wide">7.28</td>
         </tr>
         <tr class="pure-table-odd">
           <td>Express</td>
           <td>4.17.1</td>
           <td>6,037</td>
-          <td>1.32</td>
-          <td>16.1</td>
+          <td class="table-wide">1.32</td>
+          <td class="table-wide">16.1</td>
         </tr>
       </tbody>
     </table>
   </div>
 </main>
-<div class="main-margin right"></div>
