--- a/src/index.html
+++ b/src/index.html
@@ -12,34 +12,34 @@ layout: default
 <main>
   <section id="features">
     <div class="feature-graphic-container one">
-      <img src="/assets/images/speed-black-48dp.svg" alt="">
+      <img src="/assets/images/speed-black-48dp.svg" alt="Feature icon one">
     </div>
     <div class="feature-text-container one">
-      <h2>Speedy</h2>
+      <h2><img class="inline-icon" src="/assets/images/speed-black-48dp.svg" alt="Feature icon one"> Speedy</h2>
       <p>Tuft is one of the fastest web frameworks for Node.js. See the <a href="/benchmarks/">benchmarks</a>.</p>
     </div>
     <div class="feature-graphic-container two">
-      <img src="/assets/images/exposure_zero-black-48dp.svg" alt="">
+      <img src="/assets/images/exposure_zero-black-48dp.svg" alt="Feature icon two">
     </div>
     <div class="feature-text-container two">
-      <h2>Minimalist</h2>
+      <h2><img class="inline-icon zero" src="/assets/images/exposure_zero-black-48dp.svg" alt="Feature icon two"> Minimalist</h2>
       <p>Routing is a core feature of Tuft, but features commonly found in other
         route-based frameworks are intentionally not included, resulting in minimal overhead.</p>
       <br>
     </div>
     <div class="feature-graphic-container three">
-      <img src="/assets/images/aspect_ratio-black-48dp.svg" alt="">
+      <img src="/assets/images/aspect_ratio-black-48dp.svg" alt="Feature icon three">
     </div>
     <div class="feature-text-container three">
-      <h2>Scalable</h2>
+      <h2><img class="inline-icon" src="/assets/images/aspect_ratio-black-48dp.svg" alt="Feature icon two"> Scalable</h2>
       <p>Tuft's routing algorithm has a timing complexity of O(1), so it will continue to serve requests at lightning
         fast speed, even with thousands of routes.</p>
     </div>
     <div class="feature-graphic-container four">
-      <img src="/assets/images/extension-black-48dp.svg" alt="">
+      <img src="/assets/images/extension-black-48dp.svg" alt="Feature icon four">
     </div>
     <div class="feature-text-container four">
-      <h2>Extensible</h2>
+      <h2><img class="inline-icon" src="/assets/images/extension-black-48dp.svg" alt="Feature icon two"> Extensible</h2>
       <p>Add the required functionality to your server only as needed. Utilize Tuft's built-in extensions or write your
         own, and optionally make them available to other developers.</p>
     </div>
